- Show notifications when automatic update of IP filter fails (243458)
- Add video streaming support (234212)
- Make ratio configurable at which the share ratio becomes green (254144)
- Don't show an error message for each duplicate tracker which is added
- Stop using hardcoded colors in system tray tooltip (255732)
- Add support for tracking jobs inside the GUI of ktorrent

Changes in 4.0.5:
- Fix crash due to uncaught exception when creating torrent (255020)
- Modify tracker grouping script to avoid a memory leak in krosspython
- Fix bug causing extenders to be shown when the torrent is hidden (248205)

Changes in 4.0.4:
- Make sure that syndication filter save location overrides group save location (250116)
- Don't hardcode background of bandwidth schedule to white so that system colors are used (251925)
- Improve performance of ViewModel when there are many torrents (216501)
- Backport several improvements for IP filter auto update from trunk
- Fix bug causing two instances of ktorrent to be started when missing files dialog is shown at startup (252099)
- Fix bug causing KT to use invalid dbus paths in group paths
- Fix crash at exit due to a Core::update getting called during exit (254214)

Changes in 4.0.3:
- Fix bug causing wrong encoding to be used when the default save location of a group is read (244873)
- Fix crash in QueueManagerWidget when moving torrents in the queue
- When renaming files in a torrent prevent duplicate names (244624)
- Fix crash on exit when cleaning up UPnP requests
- Fix crash due to uncaught exception when a tor directory cannot be removed (247979)

Changes in 4.0.2:
- Fix wrong X-KDE-PluginInfo-Name in ktzeroconfplugin.desktop
- Fix crash caused by 0 pointer in webinterface plugin (242273)
- Increase auto update retry interval of ipfilter plugin to 15 minutes
- Fix bug causing groups file to grow very large over time (243182)

Changes in 4.0.1:
- Make sure that the proper encoding is used when loading syndication filters