@@ -161,7 +161,7 @@ namespace kt
 	
 	QString TorrentFileFilter(bool all_files_included)
 	{
-		QString ret = QString("*torrent|%1").arg(i18n("Torrents"));
+		QString ret = QString("*.torrent|%1").arg(i18n("Torrents"));
 		if (all_files_included)
 			ret += "\n*|" + i18n("All files");
 		return ret;
