@@ -28,6 +28,7 @@ Changes in 4.1:
 - Don't show an error message for each duplicate tracker which is added
 - Stop using hardcoded colors in system tray tooltip (255732)
 - Add support for tracking jobs inside the GUI of ktorrent
+- Ask if an existing file must be overwritten when exporting a torrent (256416)
 
 Changes in 4.0.5:
 - Fix crash due to uncaught exception when creating torrent (255020)
